<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.claytonandrade.lanchonetemodelo.cards.CardCardapio">

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorCardapio"
            android:padding="10dp">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/foto_lanche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/x_salada"/>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nome_lanche"
                        android:text="@string/x_salada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/valor_lanche"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valor_salada"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/descricao_lanche"
                    android:text="@string/x_salada_ingredientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
