<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
tools:context="com.example.claytonandrade.lanchonetemodelo.cards.CardBebidas">

<android.support.v7.widget.CardView
    card_view:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorCardapio"
        android:padding="10dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/foto_bebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coca_lata"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nome_bebida"
                    android:text="@string/coca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/valor_refri_lata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_refri_lata"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descricao_bebida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lata"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/img_btn_remover"
                    android:padding="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_circle_24dp"/>

                <TextView
                    android:id="@+id/edt_qnt_refri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="5sp"
                    android:text="0"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/img_btn_adicionar"
                    android:padding="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_circle_24dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
</LinearLayout>
